fix: remove global align assignment

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -55,7 +55,6 @@
         border-bottom: 1px solid var(--g-color-line-generic);
 
         line-height: variables.$tableLineHeight;
-        vertical-align: top;
         text-align: left;
         overflow-wrap: break-word;
 
